# csce_5310

./: README.md
fast_food_nutrition/: .gitignore  README.md  environment.yml  pyproject.toml
fast_food_nutrition/fast_food_nutrition/: algo.py  analysis.py  etl.py  model.py  util.py  viz.py
fast_food_nutrition/notebooks/: fast_food_nutrition.ipynb  fast_food_nutrition_eda.ipynb  project_presentation.ipynb
fast_food_nutrition/tests/: test_analysis.py  test_etl.py
fast_food_nutrition/tests/data/starbucks/: starbucks-menu-nutrition-food.csv  starbucks_drinkMenu_expanded.csv
