[tool.poetry]
name = "fast_food_nutrition"
version = "0.1.0"
description = ""
authors = ["Larry Johnson <johnson.larryl@gmail.com>"]

[tool.poetry.dependencies]
hypothesis = "^6.98.2"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
pandas = "^2.2.0"
python = "^3.9"
scipy = "^1.12.0"
scikit-learn = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
